[package]
name = "envchain"
version = "0.1.2"
edition = "2021"

description = "A cli tool to manage secrets in the keyring"
authors = ["TheYoxy <floryansimar@gmail.com>"]
repository = "https://github.com/TheYoxy/envchain"
readme = "README.md"
build = "build.rs"
license-file = "LICENSE.txt"
homepage = "https://github.com/TheYoxy/envchain"

[dependencies]
color-eyre = "0.6"
directories = "5"
lazy_static = "1"

log = { version = "0.4", features = [
    "max_level_debug",
    "release_max_level_warn",
] }

tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

keyring = "2"
clap = { version = "4", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
clap_complete_command = "0.5"
colored = "2"
simple_logger = "4"

[target.'cfg(target_os = "ios")'.dependencies]
security-framework = { version = "2" }
terminal-prompt = { version = "0.2" }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { version = "2" }
terminal-prompt = { version = "0.2" }

[target.'cfg(target_os = "linux")'.dependencies]
secret-service = { version = "3" }
linux-keyutils = { version = "0.2", features = ["std"] }
